<resources>
    <string name="app_name">Milk</string>
    <string name="illustration">Illustration</string>
    <string name="action_download_manager">下载管理</string>
    <string name="meizhi">Meizi</string>
    <string name="photography">Photography</string>
    <string name="download">下载</string>
    <string name="title_activity_download_manager">下载管理</string>
    <string name="start_all">全部开始</string>
    <string name="pause_all">全部暂停</string>
    <string name="clear_record">清空记录</string>
    <string name="delete_all">删除全部</string>
    <string name="action_change_span_count">更改列数</string>
    <string name="downloaded">已下载</string>
    <string name="downloading">正在下载</string>
    <string name="title_activity_theme">主题管理</string>
    <string name="setting_banner">侧滑导航栏BANNER</string>
    <string name="url_hint">网址、文件路径等</string>
    <string name="action_touch_to_top">返回顶部</string>
    <string name="gallery">图库</string>
    <string name="more_gallery">更多图库，敬请期待</string>
    <string name="dududu">屏蔽</string>
    <string name="tianjia">一些资源还算不错的网站，以后会抽空添加更多</string>
    <string name="pingbineirong">屏蔽不良的数据内容</string>
    <string name="banquan">版权</string>
    <string name="banquanneirong">应用所有资源均来自网络，如有侵权，请联系对应网站管理员删除，请勿违法以及商用，本人不对其负责</string>
    <string name="ganxie">感谢</string>
    <string name="ganxieneirong">向开源致敬，感谢所有无私的开源贡献者</string>
    <string name="juedebucuo">觉得还不错</string>
    <string name="geiwopingfen">给我评分</string>
    <string name="geiwojuanzeng">支付宝捐赠</string>
    <string name="dilidilijj">哔哩哔哩唧唧</string>
    <string name="hitokoto">一言</string>
    <string name="iota9star">iota9star</string>
    <string name="alipay_code">FKX08696X3YPOJFGWKD92E</string>
    <string name="cosplay">Cosplay</string>
    <string name="_100">100%</string>
    <string name="please_wait">少女祈祷中…</string>
    <string name="wait">…</string>
    <string name="_0">0%</string>
    <string name="traffic_information">已用流量</string>
    <string name="cache">图片缓存</string>
    <string name="opened">打开</string>
    <string name="span_count">图片展示列数</string>
    <string name="cancel">取消</string>
    <string name="continue_str">继续</string>
    <string name="finished">完成</string>
    <string name="reinput">重新输入</string>
    <string name="lock">解锁</string>
    <string name="pin">PIN</string>
    <string name="fingerprint">指纹</string>
    <string name="wait_inut">等待输入</string>
    <string name="yiju">一句</string>
    <string name="ad">AD</string>
    <string name="loli">Loli</string>
    <string name="today_in_history">历史上的今天</string>
    <string name="juzi">句子</string>
    <string name="go">GO</string>
    <string name="set_pin">设置 PIN</string>
    <string name="unlock">解锁</string>
    <string name="settings">设置</string>
    <string name="widget">小部件</string>
    <string name="collection_all">收藏全部</string>
    <string name="download_all">下载全部</string>
    <string name="show_finished">只显示下载完成</string>
    <string name="show_ing">只显示未完成</string>
    <string name="show_all">显示所有任务</string>
    <string name="download_count">同时下载任务数</string>
</resources>
